# urbanpulse

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  supervisord.conf
.github/workflows/: ci.yml  ingest.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
scripts/: ingest.py  run_ingestion.py  seed_demo_data.py
src/urbanpulse/: __init__.py  config.py  database.py
src/urbanpulse/api/: dependencies.py  main.py
src/urbanpulse/api/routers/: anomalies.py  health_index.py  locations.py  measurements.py  predictions.py
src/urbanpulse/dashboard/: api_client.py  app.py
src/urbanpulse/ingestion/: __init__.py  openaq_client.py  pipeline.py
src/urbanpulse/ml/: __init__.py  anomaly.py  features.py  forecaster.py  health_index.py
src/urbanpulse/models/: __init__.py  dimensions.py  facts.py
src/urbanpulse/worker/: __init__.py  cache.py  run.py  scheduler.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_anomaly.py  test_features.py  test_health_index.py
